[gd_scene load_steps=7 format=3 uid="uid://c86juyw8t6qf8"]

[ext_resource type="PackedScene" uid="uid://dwfix05bqdej3" path="res://ui/hud.tscn" id="1_fc21t"]
[ext_resource type="Script" uid="uid://df7bh68v7c1hh" path="res://garlic/levels/garlic_level_base.gd" id="1_ufqef"]
[ext_resource type="Texture2D" uid="uid://dd7e2667o41mx" path="res://assets/garlic/room.png" id="2_mgsey"]
[ext_resource type="Texture2D" uid="uid://bd5tim0a072gm" path="res://assets/garlic/woodbase.png" id="3_mgsey"]
[ext_resource type="AudioStream" uid="uid://d0cu64w4mxdhq" path="res://assets/music/Goblins_Den_(Regular).wav" id="5_y2xoq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufqef"]
size = Vector2(128, 304)

[node name="GarlicLevel_Base" type="Node2D"]
script = ExtResource("1_ufqef")
disk_num = 3

[node name="HUD" parent="." instance=ExtResource("1_fc21t")]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -184.0
offset_top = 128.0
offset_right = 1352.0
offset_bottom = 1152.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_mgsey")

[node name="WoodBase" type="Sprite2D" parent="."]
position = Vector2(400, 650)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_mgsey")

[node name="Spike1" type="Area2D" parent="." groups=["spike"]]
position = Vector2(264, 592)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike1"]
position = Vector2(-8, -8)
shape = SubResource("RectangleShape2D_ufqef")

[node name="Slot0" type="Marker2D" parent="Spike1"]
position = Vector2(0, 96)

[node name="Slot1" type="Marker2D" parent="Spike1"]
position = Vector2(0, 48)

[node name="Slot2" type="Marker2D" parent="Spike1"]

[node name="Slot3" type="Marker2D" parent="Spike1"]
position = Vector2(0, -48)

[node name="Spike2" type="Area2D" parent="." groups=["spike"]]
position = Vector2(404, 592)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike2"]
position = Vector2(-8, -8)
shape = SubResource("RectangleShape2D_ufqef")

[node name="Slot0" type="Marker2D" parent="Spike2"]
position = Vector2(0, 96)

[node name="Slot1" type="Marker2D" parent="Spike2"]
position = Vector2(0, 48)

[node name="Slot2" type="Marker2D" parent="Spike2"]

[node name="Slot3" type="Marker2D" parent="Spike2"]
position = Vector2(0, -48)

[node name="Spike3" type="Area2D" parent="." groups=["spike"]]
position = Vector2(544, 592)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike3"]
position = Vector2(-8, -8)
shape = SubResource("RectangleShape2D_ufqef")

[node name="Slot0" type="Marker2D" parent="Spike3"]
position = Vector2(-8, 96)

[node name="Slot1" type="Marker2D" parent="Spike3"]
position = Vector2(-8, 48)

[node name="Slot2" type="Marker2D" parent="Spike3"]
position = Vector2(-8, -8)

[node name="Slot3" type="Marker2D" parent="Spike3"]
position = Vector2(-8, -48)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_y2xoq")
autoplay = true
